--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: at.jojokobi.blockykingdom.BlockyKingdomPlugin
 version: 0.1
 author: jojokobi
 load: STARTUP
-depend: [JojokobiUtil, JojosGenerator]
+depend: [JojokobiUtil]
 api-version: 1.19
 commands:
   resetstats:
