--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,40 @@
     			<target>1.8</target>
     		</configuration>
     	</plugin>
-    </plugins>
+	  	<plugin>
+	  		<groupId>net.md-5</groupId>
+	  		<artifactId>specialsource-maven-plugin</artifactId>
+	  		<version>1.2.2</version>
+	  		<executions>
+	  			<execution>
+	  				<phase>package</phase>
+	  				<goals>
+	  					<goal>remap</goal>
+	  				</goals>
+	  				<id>remap-obf</id>
+	  				<configuration>
+	  					<srgIn>org.spigotmc:minecraft-server:1.19-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
+	  					<reverse>true</reverse>
+	  					<remappedDependencies>org.spigotmc:spigot:1.19-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
+	  					<remappedArtifactAttached>true</remappedArtifactAttached>
+	  					<remappedClassifierName>remapped-obf</remappedClassifierName>
+	  				</configuration>
+	  			</execution>
+	  			<execution>
+	  				<phase>package</phase>
+	  				<goals>
+	  					<goal>remap</goal>
+	  				</goals>
+	  				<id>remap-spigot</id>
+	  				<configuration>
+	  					<inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
+	  					<srgIn>org.spigotmc:minecraft-server:1.19-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
+	  					<remappedDependencies>org.spigotmc:spigot:1.19-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
+	  				</configuration>
+	  			</execution>
+	  		</executions>
+	  	</plugin>
+	  </plugins>
   </build>
   <dependencies>
   	<dependency>
@@ -27,6 +60,13 @@
   		<artifactId>spigot-api</artifactId>
   		<version>1.19-R0.1-SNAPSHOT</version>
   		<scope>provided</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.spigotmc</groupId>
+  		<artifactId>spigot</artifactId>
+  		<version>1.19-R0.1-SNAPSHOT</version>
+  		<scope>provided</scope>
+  		<classifier>remapped-mojang</classifier>
   	</dependency>
   </dependencies>
 </project>
