Added option to buy villagers

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,6 @@ commands:
   resetstats:
     description: Resets a players skills
     usage: /resetstats
+  glowvillagers:
+    description: Makes all villagers of the current kingdom glow for 15 minutes
+    usage: /glowvillagers
